Fixed sticky masthead  with overlap setting

--- a/sass/site/primary/_masthead.scss
+++ b/sass/site/primary/_masthead.scss
@@ -11,6 +11,7 @@
 	@at-root {
 		.sticky-menu:not(.no-topbar) & {
 			position: absolute;
+			top: auto;
 		}
 
 		.sticky-menu.no-topbar &,
